fixed spacing within app-content

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,8 @@ body{
   position: relative;
   background-color: #2c2d48;
   color: white;
+  display: flex;
+  height: 100vh;
 }
 
 .sidebar {
@@ -75,8 +77,6 @@ body{
 
 .map-grid {
   display: flexbox;
-  width: 100%;
-  height: 100%;
 }
 
 .map-card {
